# TL-detector

./: README.md
doc/: python3에서 cv_bridge issue.url
docker/: command.txt  docker_run.sh  install_docker.sh
src/autoware_perception_msgs/: CMakeLists.txt
src/autoware_perception_msgs/msg/traffic_light_recognition/: TrafficLightRoi.msg
src/dgist_trafficlight/: CMakeLists.txt  package.xml
src/dgist_trafficlight/src/: DEFINE.py  inference.py  model.py  utils.py
src/dgist_trafficlight/src/backbone/: fpn.py  resnet.py
src/dgist_trafficlight/src/head/: dgist_trafficlight_head.py
